--- a/template/tuya/1.html
+++ b/template/tuya/1.html
@@ -19,9 +19,9 @@
                     <div class="img-c" style="background-image:url(../../imgs/tuya/photo/1.png);"></div>
                 </div>
                 <div class="content-txt">
-                    <p class="animated fadeIn delay-4">天真是孜孜不倦的奔跑</p>
-                    <p class="animated fadeIn delay-4d5">跟着地上的脚印</p>
-                    <p class="animated fadeIn delay-5">去探寻奇妙的梦境</p>
+                    <p class="animated fadeIn delay-5">天真是孜孜不倦的奔跑</p>
+                    <p class="animated fadeIn delay-6">跟着地上的脚印</p>
+                    <p class="animated fadeIn delay-7">去探寻奇妙的梦境</p>
                 </div>
                 <div class="tuzi animated duration-1"></div>
                 <div class="say animated duration-1 delay-f5"><div class="piu"></div></div>
@@ -29,9 +29,9 @@
                     <div class="bb-1 animated delay-2 duration-4"></div>
                     <div class="bb-2 animated delay-2 duration-4"></div>
                     <div class="bb-3 animated delay-2 duration-4"></div>
-                    <div class="bb-4 animated delay-2 duration-4"></div>
-                    <div class="bb-5 animated delay-2 duration-4"></div>
-                    <div class="bb-6 animated delay-2 duration-4"></div>
+                    <div class="bb-4 animated delay-2 duration-8"></div>
+                    <div class="bb-5 animated delay-2 duration-8"></div>
+                    <div class="bb-6 animated delay-2 duration-7"></div>
                 </div>
             </div>
         </div>
