--- a/template/tuya/2.html
+++ b/template/tuya/2.html
@@ -19,12 +19,26 @@
                     <div class="img-c" style="background-image:url(../../imgs/tuya/photo/2.png);"></div>
                 </div>
                 <div class="content-txt">
-                    <p class="animated fadeIn delay-4">天真是孜孜不倦的奔跑</p>
-                    <p class="animated fadeIn delay-4d5">跟着地上的脚印</p>
-                    <p class="animated fadeIn delay-5">去探寻奇妙的梦境</p>
+                    <p class="animated fadeIn delay-4">我们像是风铃</p>
+                    <p class="animated fadeIn delay-5">相互碰撞叮叮当当</p>
+                    <p class="animated fadeIn delay-6">在彼此的生活中闪耀</p>
                 </div>
                 <div class="dog animated duration-f5"></div>
-
+                <div class="bubbles">
+                    <div class="bubbles-1 animated duration-2 delay-1">
+                        <div class="bb-1 animated delay-1 duration-2"></div>
+                        <div class="bb-2 animated delay-1 duration-2"></div>
+                        <div class="bb-3 animated delay-1 duration-2"></div>
+                        <div class="bb-4 animated delay-1 duration-2"></div>
+                        <div class="bb-5 animated delay-1 duration-2"></div>
+                        <div class="bb-6 animated delay-1 duration-2"></div>
+                    </div>
+                    <div class="bubbles-2 animated duration-4 delay-1">
+                        <div class="bb-7 animated delay-1 duration-4"></div>
+                        <div class="bb-8 animated delay-1 duration-4"></div>
+                        <div class="bb-9 animated delay-1d5 duration-4"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
