--- a/template/tuya/3.html
+++ b/template/tuya/3.html
@@ -25,7 +25,14 @@
                 </div>
                 <div class="dog animated duration-1"></div>
                 <div class="say animated duration-1 delay-1"><div class="ka"></div></div>
-
+                <div class="bb-1 animated duration-2 delay-1"></div>
+                <div class="bb-2 animated duration-2 delay-1"></div>
+                <div class="bb-3 animated duration-2 delay-1"></div>
+                <div class="bb-4 animated duration-2 delay-1"></div>
+                <div class="bb-5 animated duration-2 delay-1"></div>
+                <div class="bb-6 animated duration-2 delay-1"></div>
+                <div class="bb-7 animated duration-2 delay-1"></div>
+                <div class="bb-8 animated duration-2 delay-1"></div>
             </div>
         </div>
     </div>
