--- a/template/tuya/5.html
+++ b/template/tuya/5.html
@@ -19,14 +19,20 @@
                     <div class="img-c" style="background-image:url(../../imgs/tuya/photo/5.png);"></div>
                 </div>
                 <div class="content-txt">
-                    <p class="animated fadeIn delay-4">天真是孜孜不倦的奔跑</p>
-                    <p class="animated fadeIn delay-4d5">跟着地上的脚印</p>
-                    <p class="animated fadeIn delay-5">去探寻奇妙的梦境</p>
+                    <p class="animated fadeIn delay-5">放肆的玩耍</p>
+                    <p class="animated fadeIn delay-6">即使受伤也要尽情挥洒</p>
+                    <p class="animated fadeIn delay-7">把单调的生活渲染成画</p>
                 </div>
                 <div class="dog animated duration-1"></div>
                 <div class="say-c animated duration-1">
-                    <div class="say animated duration-1 infinite delay-1"><div class="ha"></div></div>
+                    <div class="say animated duration-1  delay-1"><div class="ha"></div></div>
                 </div>
+                <div class="bb-1 animated duration-4 delay-2"></div>
+                <div class="bb-2 animated duration-4 delay-2"></div>
+                <div class="bb-3 animated duration-4 delay-2"></div>
+                <div class="bb-4 animated duration-4 delay-2"></div>
+                <div class="bb-5 animated duration-4 delay-2"></div>
+                <div class="bb-6 animated duration-4 delay-2"></div>
             </div>
         </div>
     </div>
