--- a/template/tuya/6.html
+++ b/template/tuya/6.html
@@ -21,6 +21,7 @@
                     <div class="t-down animated duration-1"></div>
                     <div class="t-color-wrap animated duration-1 delay-3">
                         <div class="t-color animated duration-1"></div>
+                        <img class="t-up-up" src="../../imgs/tuya/6/txt-up.png" width="390" height="127" />
                     </div>
                     <div class="bubbles animated fadeIn delay-3">
                         <div class="b-1"></div>
@@ -58,8 +59,9 @@
 
 </div>
 
-<script src="../../lib/zepto/zepto.min.js"></script>
+<script src="../../lib/eraser/zepto.min.js"></script>
 <script src="../../lib/swiper/js/swiper.js"></script>
+<script src="../../lib/eraser/jquery.eraser.js"></script>
 <script src="../../src/tuya/index.js"></script>
 </body>
 </html>
