--- a/template/tuya/index.html
+++ b/template/tuya/index.html
@@ -19,9 +19,9 @@
                     <div class="img-c" style="background-image:url(../../imgs/tuya/photo/1.png);"></div>
                 </div>
                 <div class="content-txt">
-                    <p class="animated fadeIn delay-4">天真是孜孜不倦的奔跑</p>
-                    <p class="animated fadeIn delay-4d5">跟着地上的脚印</p>
-                    <p class="animated fadeIn delay-5">去探寻奇妙的梦境</p>
+                    <p class="animated fadeIn delay-5">天真是孜孜不倦的奔跑</p>
+                    <p class="animated fadeIn delay-6">跟着地上的脚印</p>
+                    <p class="animated fadeIn delay-7">去探寻奇妙的梦境</p>
                 </div>
                 <div class="tuzi animated duration-1"></div>
                 <div class="say animated duration-1 delay-f5"><div class="piu"></div></div>
@@ -29,9 +29,9 @@
                     <div class="bb-1 animated delay-2 duration-4"></div>
                     <div class="bb-2 animated delay-2 duration-4"></div>
                     <div class="bb-3 animated delay-2 duration-4"></div>
-                    <div class="bb-4 animated delay-2 duration-4"></div>
-                    <div class="bb-5 animated delay-2 duration-4"></div>
-                    <div class="bb-6 animated delay-2 duration-4"></div>
+                    <div class="bb-4 animated delay-2 duration-8"></div>
+                    <div class="bb-5 animated delay-2 duration-8"></div>
+                    <div class="bb-6 animated delay-2 duration-7"></div>
                 </div>
             </div>
             <div class="swiper-slide swiper-2">
@@ -39,12 +39,26 @@
                     <div class="img-c" style="background-image:url(../../imgs/tuya/photo/2.png);"></div>
                 </div>
                 <div class="content-txt">
-                    <p class="animated fadeIn delay-4">天真是孜孜不倦的奔跑</p>
-                    <p class="animated fadeIn delay-4d5">跟着地上的脚印</p>
-                    <p class="animated fadeIn delay-5">去探寻奇妙的梦境</p>
+                    <p class="animated fadeIn delay-4">我们像是风铃</p>
+                    <p class="animated fadeIn delay-5">相互碰撞叮叮当当</p>
+                    <p class="animated fadeIn delay-6">在彼此的生活中闪耀</p>
                 </div>
                 <div class="dog animated duration-f5"></div>
-
+                <div class="bubbles">
+                    <div class="bubbles-1 animated duration-2 delay-1">
+                        <div class="bb-1 animated delay-1 duration-2"></div>
+                        <div class="bb-2 animated delay-1 duration-2"></div>
+                        <div class="bb-3 animated delay-1 duration-2"></div>
+                        <div class="bb-4 animated delay-1 duration-2"></div>
+                        <div class="bb-5 animated delay-1 duration-2"></div>
+                        <div class="bb-6 animated delay-1 duration-2"></div>
+                    </div>
+                    <div class="bubbles-2 animated duration-4 delay-1">
+                        <div class="bb-7 animated delay-1 duration-4"></div>
+                        <div class="bb-8 animated delay-1 duration-4"></div>
+                        <div class="bb-9 animated delay-1d5 duration-4"></div>
+                    </div>
+                </div>
             </div>
             <div class="swiper-slide swiper-3">
                 <div class="img-wrap animated duration-1">
@@ -57,7 +71,14 @@
                 </div>
                 <div class="dog animated duration-1"></div>
                 <div class="say animated duration-1 delay-1"><div class="ka"></div></div>
-
+                <div class="bb-1 animated duration-2 delay-1"></div>
+                <div class="bb-2 animated duration-2 delay-1"></div>
+                <div class="bb-3 animated duration-2 delay-1"></div>
+                <div class="bb-4 animated duration-2 delay-1"></div>
+                <div class="bb-5 animated duration-2 delay-1"></div>
+                <div class="bb-6 animated duration-2 delay-1"></div>
+                <div class="bb-7 animated duration-2 delay-1"></div>
+                <div class="bb-8 animated duration-2 delay-1"></div>
             </div>
             <div class="swiper-slide swiper-4">
                 <div class="img-wrap animated duration-2">
@@ -72,20 +93,33 @@
                 <div class="light-wrap animated duration-2 infinite delay-2">
                     <div class="lights"><i></i><i></i><i></i><i></i><i></i></div>
                 </div>
+                <div class="bb-1 animated duration-4 delay-2"></div>
+                <div class="bb-2 animated duration-4 delay-2"></div>
+                <div class="bb-3 animated duration-4 delay-2"></div>
+                <div class="bb-4 animated duration-4 delay-2"></div>
+                <div class="bb-5 animated duration-3 delay-3"></div>
+                <div class="bb-6 animated duration-3 delay-3"></div>
+                <div class="bb-7 animated duration-3 delay-2"></div>
             </div>
             <div class="swiper-slide swiper-5">
                 <div class="img-wrap animated duration-2">
                     <div class="img-c" style="background-image:url(../../imgs/tuya/photo/5.png);"></div>
                 </div>
                 <div class="content-txt">
-                    <p class="animated fadeIn delay-4">天真是孜孜不倦的奔跑</p>
-                    <p class="animated fadeIn delay-4d5">跟着地上的脚印</p>
-                    <p class="animated fadeIn delay-5">去探寻奇妙的梦境</p>
+                    <p class="animated fadeIn delay-5">放肆的玩耍</p>
+                    <p class="animated fadeIn delay-6">即使受伤也要尽情挥洒</p>
+                    <p class="animated fadeIn delay-7">把单调的生活渲染成画</p>
                 </div>
                 <div class="dog animated duration-1"></div>
                 <div class="say-c animated duration-1">
-                    <div class="say animated duration-1 infinite delay-1"><div class="ha"></div></div>
+                    <div class="say animated duration-1  delay-1"><div class="ha"></div></div>
                 </div>
+                <div class="bb-1 animated duration-4 delay-2"></div>
+                <div class="bb-2 animated duration-4 delay-2"></div>
+                <div class="bb-3 animated duration-4 delay-2"></div>
+                <div class="bb-4 animated duration-4 delay-2"></div>
+                <div class="bb-5 animated duration-4 delay-2"></div>
+                <div class="bb-6 animated duration-4 delay-2"></div>
             </div>
             <div class="swiper-slide swiper-6">
                 <div class="title">
@@ -94,6 +128,7 @@
                     <div class="t-down animated duration-1"></div>
                     <div class="t-color-wrap animated duration-1 delay-3">
                         <div class="t-color animated duration-1"></div>
+                        <img class="t-up-up" src="../../imgs/tuya/6/txt-up.png" width="390" height="127" />
                     </div>
                     <div class="bubbles animated fadeIn delay-3">
                         <div class="b-1"></div>
@@ -130,8 +165,9 @@
     </div>
 </div>
 
-<script src="../../lib/zepto/zepto.min.js"></script>
+<script src="../../lib/eraser/zepto.min.js"></script>
 <script src="../../lib/swiper/js/swiper.js"></script>
+<script src="../../lib/eraser/jquery.eraser.js"></script>
 <script src="../../src/tuya/index.js"></script>
 </body>
 </html>
