--- a/common/ani.less
+++ b/common/ani.less
@@ -83,6 +83,10 @@
 	-webkit-animation-delay: 1s;
     animation-delay: 1s;
 }
+.animated.delay-1d5{
+    -webkit-animation-delay: 1.5s;
+    animation-delay: 1.5s;
+}
 .animated.delay-2{
 	-webkit-animation-delay: 2s;
     animation-delay: 2s;
