--- a/src/tuya/5.less
+++ b/src/tuya/5.less
@@ -25,7 +25,7 @@
 	.content-txt{
 		position: absolute;
 		right: 54px;
-		bottom: 58px;
+		top: 900px;
 	}
 	.dog{
 		.bg-contain();
@@ -34,16 +34,16 @@
 		height: 143px;
 		position: absolute;
 		left: 43px;
-		bottom: 38px;
+		top: 858px;
 	}
 	.say-c{
-		.ani-name(say5-c);
+		.ani-name(s5-say5-c);
 		.trans-origin(left bottom);
 		width: 65px;
 		height: 56px;
 		position: absolute;
 		left: 184px;
-		bottom: 86px;
+		top: 908px;
 	}
 	.say{
 		.bg-contain();
@@ -51,7 +51,7 @@
 		position: absolute;
 		width: 100%;
 		height: 100%;
-		.ani-name(say5);
+		.ani-name(s5-say5);
 		.trans-origin(left bottom);
 		.ani-dir-both();
 		.ani-time-func(ease-out);
@@ -66,9 +66,51 @@
 			top: 14px;
 		}
 	}
+	.bb-1{
+		.circle(80px);
+		position: absolute;
+		left: 320px;
+		top: 760px;
+		.ani-name(s5-bb-1);
+	}
+	.bb-2{
+		.circle(40px);
+		position: absolute;
+		right: 208px;
+		top: 788px;
+		.ani-name(s5-bb-2);
+	}
+	.bb-3{
+		.circle(25px);
+		position: absolute;
+		top: 826px;
+		left: 298px;
+		.ani-name(s5-bb-1);
+	}
+	.bb-4{
+		.circle(16px);
+		position: absolute;
+		top: 832px;
+		left: 240px;
+		.ani-name(s5-bb-1);
+	}
+	.bb-5{
+		.circle(10px);
+		position: absolute;
+		top: 858px;
+		left: 308px;
+		.ani-name(s5-bb-1);
+	}
+	.bb-6{
+		.circle(10px);
+		position: absolute;
+		top: 850px;
+		left: 550px;
+		.ani-name(s5-bb-6);
+	}
 }
 
-@-webkit-keyframes say5-c{
+@-webkit-keyframes s5-say5-c{
 	0%{
 		.transform(scale(0));
 	}
@@ -81,11 +123,55 @@
 }
 
 
-@-webkit-keyframes say5{
+@-webkit-keyframes s5-say5{
 	0%{
 		.transform(scale(1));
 	}
 	100%{
 		.transform(scale(1.3));
+	}
+}
+
+@-webkit-keyframes s5-bb-1{
+	0%{
+		.transform(translateX(-238px) translateY(170px));
+		.ani-time-func(ease-in);
+		opacity: 0;
+	}
+	20%{
+		.transform(translateX(-200px) translateY(190px));
+		.ani-time-func(linear);
+		opacity: 1;
+	}
+	60%{
+		.transform(translateX(-120px) translateY(10px));
+		.ani-time-func(ease-out);
+	}
+}
+@-webkit-keyframes s5-bb-2{
+	0%{
+		.transform(translateX(-300px) translateY(48px));
+		.ani-time-func(ease-in);
+		opacity: 0;
+	}
+	30%{
+		.transform(translateX(-220px) translateY(60px));
+		.ani-time-func(linear);
+		opacity: 1;
+	}
+	60%{
+		.transform(translateX(-120px) translateY(10px));
+		.ani-time-func(ease-out);
+	}
+}
+
+@-webkit-keyframes s5-bb-6{
+	0%{
+		.transform(translateX(-350px) translateY(160px));
+		.ani-time-func(linear);
+		opacity: 0;
+	}
+	10%{
+		opacity: 1;
 	}
 }
