--- a/template/tuya/4.html
+++ b/template/tuya/4.html
@@ -27,6 +27,13 @@
                 <div class="light-wrap animated duration-2 infinite delay-2">
                     <div class="lights"><i></i><i></i><i></i><i></i><i></i></div>
                 </div>
+                <div class="bb-1 animated duration-4 delay-2"></div>
+                <div class="bb-2 animated duration-4 delay-2"></div>
+                <div class="bb-3 animated duration-4 delay-2"></div>
+                <div class="bb-4 animated duration-4 delay-2"></div>
+                <div class="bb-5 animated duration-3 delay-3"></div>
+                <div class="bb-6 animated duration-3 delay-3"></div>
+                <div class="bb-7 animated duration-3 delay-2"></div>
             </div>
         </div>
     </div>
